# manage_fastapi

./: composer.py  pyproject.toml  readme.md
manage/modules/: router.txt
manage_fastapi/: composer.py  test_data.json
manage_fastapi/modules/: models.txt
modules/: __init__.txt  app.txt  definitions.txt  test.txt
