[tool.poetry]
name = "manage-fastapi"
version = "0.1.0"
description = ""
authors = ["Cristian Ordoñez <cristiano_ord93@hotmail.com>"]
readme = "README.md"
packages = [{include = "manage_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
